File reading method changed