@@ -3,7 +3,6 @@ package org.kerim.minio.startup;
 import io.minio.BucketExistsArgs;
 import io.minio.MakeBucketArgs;
 import io.minio.MinioClient;
-import io.netty.util.internal.ResourcesUtil;
 import io.quarkus.runtime.StartupEvent;
 import org.kerim.minio.config.S3ConfigProperties;
 import org.kerim.minio.service.MinioService;
@@ -14,9 +13,8 @@ import javax.inject.Inject;
 import org.jboss.logging.Logger;
 
 import java.io.ByteArrayInputStream;
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
+import java.io.InputStream;
 import java.util.UUID;
 
 @ApplicationScoped
@@ -46,8 +44,9 @@ public class DemoData {
             e.printStackTrace();
         }
 
-        // MinioService.class is used because it cannot read the den.jpeg file under demo.class. (-_-)
-        File file = ResourcesUtil.getFile(MinioService.class, "den.jpeg");
-        minioService.saveImage(UUID.randomUUID().toString(), new ByteArrayInputStream(Files.readAllBytes(file.toPath())));
+        ClassLoader classLoader = getClass().getClassLoader();
+        InputStream is = classLoader.getResourceAsStream("img/babyYoda.jpeg");
+
+        minioService.saveImage(UUID.randomUUID().toString(), new ByteArrayInputStream(is.readAllBytes()));
     }
 }
